@@ -10,6 +10,9 @@ Downloads:
 Official Forum:
     https://sourceforge.net/p/spacefm/discussion/general/
 
+Guidelines For Distributing Modifications:
+    https://github.com/IgnorantGuru/spacefm/wiki/Guidelines-For-Distributing-Modifications
+
 
 CONTENTS
 
