@@ -12,6 +12,8 @@
     fix identification of empty optical drive
     change default device icons
     add lilyterm to emulators list
+    remove erroneous files from pkg branch
+    README added wiki link Guidelines For Distributing Modifications
 0.9.0   2013-10-22:
     add browse-for options in Rename/New dialog Browse dialog
     run fm Devices menu functions in task man
